:bug: navbar: black dot in logo on mobile, doesnt show in developer mode localy 2.0

--- a/styles/components/navbar/navMobile.module.scss
+++ b/styles/components/navbar/navMobile.module.scss
@@ -19,10 +19,9 @@
   position: absolute;
   top: 12px;
   left: 30px;
-  width: 65px;
+  width: 67px;
   height: 40px;
   cursor: pointer;
-  z-index: 100;
 }
 
 // ? Main Menue Items:
